--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,12 @@ table {
   border-collapse: collapse;
   border-spacing: 0; }
 
+html {
+  font-family: "ABeeZee", sans-serif; }
+
+.cita {
+  font-family: "Courgette", cursive; }
+
 .fondo1 {
   display: block;
   position: fixed;
@@ -48,5 +54,15 @@ table {
   background-size: 100%;
   width: 100%;
   height: 100%; }
+
+.honey {
+  background: #ffb54f;
+  background: -moz-linear-gradient(45deg, #ffb54f 0%, #ffe3b6 100%);
+  background: -webkit-gradient(left bottom, right top, color-stop(0%, #ffb54f), color-stop(100%, #ffe3b6));
+  background: -webkit-linear-gradient(45deg, #ffb54f 0%, #ffe3b6 100%);
+  background: -o-linear-gradient(45deg, #ffb54f 0%, #ffe3b6 100%);
+  background: -ms-linear-gradient(45deg, #ffb54f 0%, #ffe3b6 100%);
+  background: linear-gradient(45deg, #ffb54f 0%, #ffe3b6 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffb54f', endColorstr='#ffe3b6', GradientType=1 ); }
 
 /*# sourceMappingURL=style.css.map */
