--- a/css/style.sass
+++ b/css/style.sass
@@ -41,6 +41,11 @@ table
 	border-collapse: collapse
 	border-spacing: 0
 
+html
+	font-family: 'ABeeZee', sans-serif
+.cita
+	font-family: 'Courgette', cursive
+
 .fondo1
 	display: block
 	position: fixed
@@ -49,3 +54,13 @@ table
 	background-size: 100%
 	width: 100%
 	height: 100%
+
+.honey
+	background: rgba(255,181,79,1)
+	background: -moz-linear-gradient(45deg, rgba(255,181,79,1) 0%, rgba(255,227,182,1) 100%)
+	background: -webkit-gradient(left bottom, right top, color-stop(0%, rgba(255,181,79,1)), color-stop(100%, rgba(255,227,182,1)))
+	background: -webkit-linear-gradient(45deg, rgba(255,181,79,1) 0%, rgba(255,227,182,1) 100%)
+	background: -o-linear-gradient(45deg, rgba(255,181,79,1) 0%, rgba(255,227,182,1) 100%)
+	background: -ms-linear-gradient(45deg, rgba(255,181,79,1) 0%, rgba(255,227,182,1) 100%)
+	background: linear-gradient(45deg, rgba(255,181,79,1) 0%, rgba(255,227,182,1) 100%)
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffb54f', endColorstr='#ffe3b6', GradientType=1 )
