--- a/css/style.sass
+++ b/css/style.sass
@@ -43,6 +43,7 @@ table
 
 html
 	font-family: 'ABeeZee', sans-serif
+	color: white 
 .cita
 	font-family: 'Courgette', cursive
 
@@ -50,6 +51,7 @@ html
 	display: block
 	position: fixed
 	background-image: url('http://beemeet.azurewebsites.net/otros/organizar.jpeg')
+	background: #FFEDCF 
 	z-index: -1
 	background-size: 100%
 	width: 100%
@@ -64,3 +66,9 @@ html
 	background: -ms-linear-gradient(45deg, rgba(255,181,79,1) 0%, rgba(255,227,182,1) 100%)
 	background: linear-gradient(45deg, rgba(255,181,79,1) 0%, rgba(255,227,182,1) 100%)
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffb54f', endColorstr='#ffe3b6', GradientType=1 )
+
+.contendor
+	display: flex 
+	display: -webkit-flex 
+	margin: 0 auto 
+	flex-direction: row 
