--- a/css/style.sass
+++ b/css/style.sass
@@ -67,8 +67,18 @@ html
 	background: linear-gradient(45deg, rgba(255,181,79,1) 0%, rgba(255,227,182,1) 100%)
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffb54f', endColorstr='#ffe3b6', GradientType=1 )
 
+.contenido
+	display: flex 
+	display: -webkit-flex
+	align-items: center
+	-webkit-align-items: center
+	justify-content: center
+	-webkit-justify-content: center
+
 .contendor
 	display: flex 
 	display: -webkit-flex 
 	margin: 0 auto 
 	flex-direction: row 
+	background: white
+	color: black
