--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,12 @@ html {
   background: linear-gradient(45deg, #ffb54f 0%, #ffe3b6 100%);
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffb54f', endColorstr='#ffe3b6', GradientType=1 ); }
 
+.contenido {
+  display: flex;
+  display: -webkit-flex;
+  justify-content: center;
+  align-items: center; }
+
 .contendor {
   display: flex;
   display: -webkit-flex;
