--- a/css/style.sass
+++ b/css/style.sass
@@ -67,6 +67,12 @@ html
 	background: linear-gradient(45deg, rgba(255,181,79,1) 0%, rgba(255,227,182,1) 100%)
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffb54f', endColorstr='#ffe3b6', GradientType=1 )
 
+.contenido
+	display: flex 
+	display: -webkit-flex 
+	justify-content: center
+	align-items: center
+
 .contendor
 	display: flex 
 	display: -webkit-flex 
