--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,8 @@ html {
   background: -o-linear-gradient(45deg, #ffb54f 0%, #ffe3b6 100%);
   background: -ms-linear-gradient(45deg, #ffb54f 0%, #ffe3b6 100%);
   background: linear-gradient(45deg, #ffb54f 0%, #ffe3b6 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffb54f', endColorstr='#ffe3b6', GradientType=1 ); }
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffb54f', endColorstr='#ffe3b6', GradientType=1 );
+  color: white; }
 
 .contenido {
   display: flex;
@@ -76,6 +77,7 @@ html {
   display: flex;
   display: -webkit-flex;
   margin: 0 auto;
-  flex-direction: row; }
+  flex-direction: row;
+  color: black; }
 
 /*# sourceMappingURL=style.css.map */
