--- a/css/style.sass
+++ b/css/style.sass
@@ -66,6 +66,7 @@ html
 	background: -ms-linear-gradient(45deg, rgba(255,181,79,1) 0%, rgba(255,227,182,1) 100%)
 	background: linear-gradient(45deg, rgba(255,181,79,1) 0%, rgba(255,227,182,1) 100%)
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffb54f', endColorstr='#ffe3b6', GradientType=1 )
+	color: white
 
 .contenido
 	display: flex 
@@ -78,3 +79,4 @@ html
 	display: -webkit-flex 
 	margin: 0 auto 
 	flex-direction: row 
+	color: black
