--- a/css/style.css
+++ b/css/style.css
@@ -41,8 +41,7 @@ table {
   border-spacing: 0; }
 
 html {
-  font-family: "ABeeZee", sans-serif;
-  color: white; }
+  font-family: "ABeeZee", sans-serif; }
 
 .cita {
   font-family: "Courgette", cursive; }
