--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,7 @@ html {
   display: -webkit-flex;
   margin: 0 auto;
   flex-direction: row;
-  color: black; }
+  color: black;
+  background: white; }
 
 /*# sourceMappingURL=style.css.map */
