--- a/css/style.sass
+++ b/css/style.sass
@@ -68,7 +68,14 @@ html
 	color: white
 
 .contenido
+	display: flex 
+	display: -webkit-flex 
+	justify-content: center
+	align-items: center
 	.contendor
+		display: flex 
+		display: -webkit-flex 
 		margin: 0 auto 
-		color: black
-		background: white
+		flex-direction: row 
+		color: #fff
+		background: #000
