--- a/css/style.sass
+++ b/css/style.sass
@@ -46,6 +46,12 @@ html
 .cita
 	font-family: 'Courgette', cursive
 
+body 
+	display: flex 
+	display: -webkit-flex
+	justify-content: center
+	align-items: center
+
 .fondo1
 	display: block
 	position: fixed
@@ -78,4 +84,4 @@ html
 		margin: 0 auto 
 		flex-direction: row 
 		color: #fff
-		background: #000
+		background-color: #000
