--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,8 @@ body {
 
 .fondo1 {
   position: fixed;
-  background: #FFEDCF;
+  background-image: url("http://beemeet.azurewebsites.net/otros/organizar.jpeg");
+  background-size: 100%;
   z-index: -1;
   width: 100%;
   height: 100%; }
