--- a/css/style.sass
+++ b/css/style.sass
@@ -54,8 +54,9 @@ body
 
 .fondo1
 	position: fixed
-	//background-image: url('http://beemeet.azurewebsites.net/otros/organizar.jpeg')
-	background: #FFEDCF 
+	background-image: url('http://beemeet.azurewebsites.net/otros/organizar.jpeg')
+	//background: #FFEDCF 
+	background-size: 100%
 	z-index: -1
 	width: 100%
 	height: 100%
