--- a/css/style.css
+++ b/css/style.css
@@ -66,10 +66,7 @@ html {
   color: white; }
 
 .contenido {
-  display: flex;
-  display: -webkit-flex;
-  justify-content: center;
-  align-items: center; }
+  margin: 0 auto; }
   .contenido .contendor {
     display: flex;
     display: -webkit-flex;
