--- a/css/style.sass
+++ b/css/style.sass
@@ -67,10 +67,7 @@ html
 	color: white
 
 .contenido
-	display: flex 
-	display: -webkit-flex 
-	justify-content: center
-	align-items: center
+	margin: 0 auto
 	.contendor
 		display: flex 
 		display: -webkit-flex 
