--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,10 @@ html {
   color: white; }
 
 .contenido {
-  margin: 0 auto; }
+  display: flex;
+  display: -webkit-flex;
+  justify-content: center;
+  align-items: center; }
   .contenido .contendor {
     display: flex;
     display: -webkit-flex;
