--- a/css/style.sass
+++ b/css/style.sass
@@ -43,6 +43,7 @@ table
 
 html
 	font-family: 'ABeeZee', sans-serif
+
 .cita
 	font-family: 'Courgette', cursive
 
@@ -66,8 +67,12 @@ html
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffb54f', endColorstr='#ffe3b6', GradientType=1 )
 	color: white
 
+
 .contenido
-	margin: 0 auto
+	display: flex 
+	display: -webkit-flex 
+	justify-content: center
+	align-items: center
 	.contendor
 		display: flex 
 		display: -webkit-flex 
