--- a/css/style.sass
+++ b/css/style.sass
@@ -69,10 +69,9 @@ html
 
 
 .contenido
-	display: flex 
-	display: -webkit-flex 
-	justify-content: center
-	align-items: center
+	position: absolute
+	margin: 0 auto
+	display: block
 	.contendor
 		display: flex 
 		display: -webkit-flex 
