--- a/css/style.css
+++ b/css/style.css
@@ -48,8 +48,7 @@ html {
 
 .fondo1 {
   position: fixed;
-  background-image: url("http://beemeet.azurewebsites.net/otros/organizar.jpeg");
-  background-size: 100%;
+  background: #FFEDCF;
   z-index: -1;
   width: 100%;
   height: 100%; }
@@ -66,7 +65,6 @@ html {
   color: white; }
 
 .contenido {
-  position: absolute;
   margin: 0 auto;
   display: block; }
   .contenido .contendor {
