--- a/css/style.sass
+++ b/css/style.sass
@@ -69,8 +69,11 @@ html
 
 
 .contenido
-	margin: 0 auto
-	display: block
+	display: flex 
+	display: -webkit-flex
+	justify-content: center
+	align-items: center
+	margin: 50%
 	.contendor
 		display: flex 
 		display: -webkit-flex 
