--- a/css/style.css
+++ b/css/style.css
@@ -65,8 +65,11 @@ html {
   color: white; }
 
 .contenido {
-  margin: 0 auto;
-  display: block; }
+  display: flex;
+  display: -webkit-flex;
+  justify-content: center;
+  align-items: center;
+  margin: 50%; }
   .contenido .contendor {
     display: flex;
     display: -webkit-flex;
