--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,7 @@ html {
   display: -webkit-flex;
   justify-content: center;
   align-items: center;
-  margin: 50%; }
+  margin: 0px; }
   .contenido .contendor {
     display: flex;
     display: -webkit-flex;
