--- a/css/style.sass
+++ b/css/style.sass
@@ -73,7 +73,7 @@ html
 	display: -webkit-flex
 	justify-content: center
 	align-items: center
-	margin: 50%
+	margin: 0px
 	.contendor
 		display: flex 
 		display: -webkit-flex 
