--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,8 @@ html {
   display: -webkit-flex;
   justify-content: center;
   align-items: center;
-  margin: 0px; }
+  margin: 0px;
+  height: 100%; }
   .contenido .contendor {
     display: flex;
     display: -webkit-flex;
