--- a/css/style.sass
+++ b/css/style.sass
@@ -74,6 +74,7 @@ html
 	justify-content: center
 	align-items: center
 	margin: 0px
+	height: 100%
 	.contendor
 		display: flex 
 		display: -webkit-flex 
