--- a/css/style.sass
+++ b/css/style.sass
@@ -78,7 +78,12 @@ html
 	.contendor
 		display: flex 
 		display: -webkit-flex 
-		margin: 0 auto 
 		flex-direction: row 
 		color: #fff
 		background-color: #000
+		div 
+			display: flex 
+			display: -webkit-flex 
+			flex-direction: row 
+			color: #fff
+			background-color: #000
