--- a/css/style.sass
+++ b/css/style.sass
@@ -81,9 +81,7 @@ html
 		flex-direction: row 
 		color: #fff
 		background-color: #000
+		justify-content: center
+		align-items: center
 		div 
-			display: flex 
-			display: -webkit-flex 
-			flex-direction: row 
-			color: #fff
-			background-color: #000
+			width: 50%
