--- a/css/style.css
+++ b/css/style.css
@@ -64,22 +64,12 @@ html {
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffb54f', endColorstr='#ffe3b6', GradientType=1 );
   color: white; }
 
-.contenido {
+.contenido .contenedor {
   display: flex;
-  display: -webkit-flex;
-  justify-content: center;
-  align-items: center;
-  margin: 0px;
-  height: 100%; }
-  .contenido .contendor {
-    display: flex;
-    display: -webkit-flex;
-    flex-direction: row;
-    color: #fff;
-    background-color: #000;
-    justify-content: center;
-    align-items: center; }
-    .contenido .contendor div {
-      width: 50%; }
+  flex-direction: row;
+  width: 400px;
+  height: 300px; }
+  .contenido .contenedor div {
+    width: 50%; }
 
 /*# sourceMappingURL=style.css.map */
