--- a/css/style.sass
+++ b/css/style.sass
@@ -69,19 +69,10 @@ html
 
 
 .contenido
-	display: flex 
-	display: -webkit-flex
-	justify-content: center
-	align-items: center
-	margin: 0px
-	height: 100%
-	.contendor
-		display: flex 
-		display: -webkit-flex 
+	.contenedor
+		display: flex
 		flex-direction: row 
-		color: #fff
-		background-color: #000
-		justify-content: center
-		align-items: center
-		div 
+		width: 400px
+		height: 300px
+		div
 			width: 50%
