--- a/css/style.sass
+++ b/css/style.sass
@@ -69,10 +69,17 @@ html
 
 
 .contenido
+	display: flex
+	width: 100%
+	height: 100%
 	.contenedor
 		display: flex
 		flex-direction: row 
 		width: 400px
 		height: 300px
+		background: #000
+		color: #fff
+		justify-content: center
+		align-items: center
 		div
 			width: 50%
