--- a/css/style.css
+++ b/css/style.css
@@ -73,8 +73,8 @@ html {
     flex-direction: row;
     width: 400px;
     height: 300px;
-    background: #000;
-    color: #fff;
+    background: #fff;
+    color: #000;
     justify-content: center;
     align-items: center; }
     .contenido .contenedor div {
