--- a/css/style.sass
+++ b/css/style.sass
@@ -77,8 +77,8 @@ html
 		flex-direction: row 
 		width: 400px
 		height: 300px
-		background: #000
-		color: #fff
+		background: #fff
+		color: #000
 		justify-content: center
 		align-items: center
 		div
