--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,8 @@ html {
 
 .contenido {
   display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 100%; }
   .contenido .contenedor {
