--- a/css/style.css
+++ b/css/style.css
@@ -76,11 +76,10 @@ html {
     flex-direction: row;
     width: 1024px;
     height: 720px;
-    background: #fff;
-    color: #000;
     justify-content: center;
     align-items: center; }
     .contenido .contenedor div {
+      text-align: center;
       width: 50%; }
 
 /*# sourceMappingURL=style.css.map */
