--- a/css/style.sass
+++ b/css/style.sass
@@ -79,9 +79,8 @@ html
 		flex-direction: row 
 		width: 1024px
 		height: 720px
-		background: #fff
-		color: #000
 		justify-content: center
 		align-items: center
 		div
+			text-align: center
 			width: 50%
