--- a/css/style.sass
+++ b/css/style.sass
@@ -67,6 +67,15 @@ html
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffb54f', endColorstr='#ffe3b6', GradientType=1 )
 	color: white
 
+h1
+	font-size: 2.5em
+h2
+	font-size: 2em
+h3
+	font-size: 1.5em
+h4
+	font-size: 1em
+
 
 .contenido
 	display: flex
@@ -77,8 +86,8 @@ html
 	.contenedor
 		display: flex
 		flex-direction: row 
-		width: 1024px
-		height: 720px
+		width: 800px
+		height: 600px
 		justify-content: center
 		align-items: center
 		div
