--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,18 @@ html {
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffb54f', endColorstr='#ffe3b6', GradientType=1 );
   color: white; }
 
+h1 {
+  font-size: 2.5em; }
+
+h2 {
+  font-size: 2em; }
+
+h3 {
+  font-size: 1.5em; }
+
+h4 {
+  font-size: 1em; }
+
 .contenido {
   display: flex;
   justify-content: center;
@@ -74,8 +86,8 @@ html {
   .contenido .contenedor {
     display: flex;
     flex-direction: row;
-    width: 1024px;
-    height: 720px;
+    width: 800px;
+    height: 600px;
     justify-content: center;
     align-items: center; }
     .contenido .contenedor div {
