--- a/css/style.css
+++ b/css/style.css
@@ -91,6 +91,9 @@ h4 {
     justify-content: center;
     align-items: center; }
     .contenido .contenedor div {
+      display: flex;
+      justify-content: center;
+      align-items: center;
       text-align: center;
       width: 50%; }
 
