--- a/css/style.sass
+++ b/css/style.sass
@@ -91,5 +91,8 @@ h4
 		justify-content: center
 		align-items: center
 		div
+			display: flex
+			justify-content: center
+			align-items: center
 			text-align: center
 			width: 50%
