--- a/css/style.css
+++ b/css/style.css
@@ -95,6 +95,8 @@ h4 {
       justify-content: center;
       align-items: center;
       text-align: center;
-      width: 50%; }
+      width: 50%;
+      flex-direction: column;
+      background: #FFFBF5; }
 
 /*# sourceMappingURL=style.css.map */
