--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,6 @@ h4 {
       align-items: center;
       text-align: center;
       width: 50%;
-      flex-direction: column;
-      background: #FFFBF5; }
+      flex-direction: column; }
 
 /*# sourceMappingURL=style.css.map */
