--- a/css/style.css
+++ b/css/style.css
@@ -40,62 +40,155 @@ table {
   border-collapse: collapse;
   border-spacing: 0; }
 
-html {
-  font-family: "ABeeZee", sans-serif; }
+* {
+  font-family: "Open Sans", sans-serif; }
 
-.cita {
-  font-family: "Courgette", cursive; }
+h1 {
+  font-size: 2.4em;
+  font-weight: lighter; }
 
-.fondo1 {
+h2 {
+  font-size: 2em;
+  font-weight: lighter; }
+
+h3 {
+  font-size: 1.8em;
+  font-weight: lighter; }
+
+h4 {
+  font-size: 1.4em;
+  font-weight: lighter; }
+
+h5 {
+  font-size: 1em;
+  font-weight: lighter; }
+
+h6 {
+  font-size: 0.8em;
+  font-weight: lighter; }
+
+.img_background1 {
+  display: block;
+  background-image: url("http://www.nuvela.mx/other/fondo1.png");
   position: fixed;
-  background-image: url("http://beemeet.azurewebsites.net/otros/organizar.jpeg");
-  background-size: 100%;
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
   z-index: -1;
   width: 100%;
   height: 100%; }
 
-.honey {
-  background: #ffb54f;
-  background: -moz-linear-gradient(45deg, #ffb54f 0%, #ffe3b6 100%);
-  background: -webkit-gradient(left bottom, right top, color-stop(0%, #ffb54f), color-stop(100%, #ffe3b6));
-  background: -webkit-linear-gradient(45deg, #ffb54f 0%, #ffe3b6 100%);
-  background: -o-linear-gradient(45deg, #ffb54f 0%, #ffe3b6 100%);
-  background: -ms-linear-gradient(45deg, #ffb54f 0%, #ffe3b6 100%);
-  background: linear-gradient(45deg, #ffb54f 0%, #ffe3b6 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffb54f', endColorstr='#ffe3b6', GradientType=1 );
-  color: white; }
+.img_background2 {
+  display: block;
+  background-image: url("http://www.nuvela.mx/other/fondo2.png");
+  position: fixed;
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  z-index: -1;
+  width: 100%;
+  height: 100%; }
 
-h1 {
-  font-size: 2.5em; }
-
-h2 {
-  font-size: 2em; }
-
-h3 {
-  font-size: 1.5em; }
-
-h4 {
-  font-size: 1em; }
-
-.contenido {
+.content1 {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
-  height: 100%; }
-  .contenido .contenedor {
+  display: -webkit-flex;
+  -webkit-justify-content: center;
+  -webkit-align-items: center;
+  position: relative; }
+
+.blue_rectangle1 {
+  display: flex;
+  display: -webkit-flex;
+  background: #06a5f4;
+  color: #ffffff;
+  width: 824px;
+  height: 364px;
+  transform: translateY(50%);
+  -webkit-transform: translateY(50%);
+  flex-direction: row;
+  -webkit-flex-direction: row;
+  justify-content: space-between;
+  -webkit-justify-content: space-between;
+  text-align: center;
+  align-items: center;
+  -webkit-align-items: center;
+  line-height: 40px;
+  z-index: 1; }
+  .blue_rectangle1 div {
+    margin: 10px; }
+    .blue_rectangle1 div img {
+      width: 180px; }
+
+.white_rectangle1 {
+  display: flex;
+  display: -webkit-flex;
+  background: #ffffff;
+  width: 380px;
+  height: 484px;
+  transform: translateY(37%);
+  -webkit-transform: translateY(37%);
+  flex-direction: row;
+  -webkit-flex-direction: row;
+  justify-content: center;
+  -webkit-justify-content: center;
+  text-align: center;
+  align-items: center;
+  -webkit-align-items: center;
+  line-height: 40px;
+  z-index: 2;
+  position: absolute;
+  margin: 0 auto;
+  left: 25%;
+  flex-direction: column; }
+  .white_rectangle1 form {
     display: flex;
-    flex-direction: row;
-    width: 800px;
-    height: 600px;
+    display: -webkit-flex;
+    flex-direction: column;
+    -webkit-flex-direction: column;
     justify-content: center;
-    align-items: center; }
-    .contenido .contenedor div {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-      width: 50%;
-      flex-direction: column; }
+    -webkit-justify-content: center;
+    align-items: center;
+    -webkit-align-items: center; }
+    .white_rectangle1 form input {
+      margin: 10px; }
+    .white_rectangle1 form input[type="text"], .white_rectangle1 form input[type="password"], .white_rectangle1 form input[type="email"], .white_rectangle1 form input[type="tel"] {
+      padding: 10px;
+      width: 100%; }
+    .white_rectangle1 form input[type="submit"] {
+      padding: 10px;
+      padding-bottom: 5px;
+      padding-top: 5px;
+      width: 80%;
+      box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.6);
+      cursor: pointer;
+      background: #808080;
+      border: none;
+      color: #ffffff;
+      font-size: 1.8em;
+      -webkit-transition: 400ms ease;
+      transition: 400ms ease; }
+    .white_rectangle1 form input[type="submit"]:hover {
+      background: #06a5f4;
+      box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.6); }
+  .white_rectangle1 div {
+    margin: 10px; }
+    .white_rectangle1 div img {
+      width: 180px; }
+
+.button {
+  background: none;
+  border: solid 1px #ffffff;
+  color: #ffffff;
+  font-size: 1.8em;
+  padding: 8px;
+  padding-left: 14px;
+  padding-right: 14px;
+  cursor: pointer;
+  transition: 400ms ease;
+  -webkit-transition: 400ms ease; }
+
+.button:hover {
+  background: #ffffff;
+  color: #06a5f4; }
 
 /*# sourceMappingURL=style.css.map */
