--- a/css/style.sass
+++ b/css/style.sass
@@ -1,99 +1,164 @@
+@import _reset.sass
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video 
-	margin: 0
-	padding: 0
-	border: 0
-	font-size: 100%
-	vertical-align: baseline
+*
+	font-family: 'Open Sans', sans-serif
 
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section 
+$accent_blue: #06a5f4
+$dark_gray: #2e3944
+$light_white: #e3e4e5
+$light_blue: #89d2e8
+$light_gray: #d5d6d7
+$black: #000000
+$white: #ffffff
+$gray: #808080
+$dark_blue: #04627f
+
+h1
+	font-size: 2.4em
+	font-weight: lighter
+h2
+	font-size: 2em
+	font-weight: lighter
+
+h3
+	font-size: 1.8em
+	font-weight: lighter
+
+h4
+	font-size: 1.4em
+	font-weight: lighter
+
+h5
+	font-size: 1em
+	font-weight: lighter
+
+h6
+	font-size: 0.8em
+	font-weight: lighter
+
+
+.img_background1
 	display: block
-
-body 
-	line-height: 1
-
-ol, ul 
-	list-style: none
-
-blockquote, q 
-	quotes: none
-
-blockquote:before, blockquote:after,
-q:before, q:after 
-	content: ''
-	content: none
-
-table 
-	border-collapse: collapse
-	border-spacing: 0
-
-html
-	font-family: 'ABeeZee', sans-serif
-
-.cita
-	font-family: 'Courgette', cursive
-
-.fondo1
+	background-image: url('http://www.nuvela.mx/other/fondo1.png')
 	position: fixed
-	background-image: url('http://beemeet.azurewebsites.net/otros/organizar.jpeg')
-	//background: #FFEDCF 
-	background-size: 100%
+	background-size: 100% 100%
+	background-repeat: no-repeat
 	z-index: -1
 	width: 100%
 	height: 100%
 
-.honey
-	background: rgba(255,181,79,1)
-	background: -moz-linear-gradient(45deg, rgba(255,181,79,1) 0%, rgba(255,227,182,1) 100%)
-	background: -webkit-gradient(left bottom, right top, color-stop(0%, rgba(255,181,79,1)), color-stop(100%, rgba(255,227,182,1)))
-	background: -webkit-linear-gradient(45deg, rgba(255,181,79,1) 0%, rgba(255,227,182,1) 100%)
-	background: -o-linear-gradient(45deg, rgba(255,181,79,1) 0%, rgba(255,227,182,1) 100%)
-	background: -ms-linear-gradient(45deg, rgba(255,181,79,1) 0%, rgba(255,227,182,1) 100%)
-	background: linear-gradient(45deg, rgba(255,181,79,1) 0%, rgba(255,227,182,1) 100%)
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffb54f', endColorstr='#ffe3b6', GradientType=1 )
-	color: white
-
-h1
-	font-size: 2.5em
-h2
-	font-size: 2em
-h3
-	font-size: 1.5em
-h4
-	font-size: 1em
-
-
-.contenido
-	display: flex
-	justify-content: center
-	align-items: center
+.img_background2
+	display: block
+	background-image: url('http://www.nuvela.mx/other/fondo2.png')
+	position: fixed
+	background-size: 100% 100%
+	background-repeat: no-repeat
+	z-index: -1
 	width: 100%
 	height: 100%
-	.contenedor
-		display: flex
-		flex-direction: row 
-		width: 800px
-		height: 600px
+
+.content1
+	display: flex 
+	justify-content: center
+	align-items: center
+	display: -webkit-flex 
+	-webkit-justify-content: center
+	-webkit-align-items: center
+	position: relative
+
+.container1
+
+.blue_rectangle1
+	display: flex 
+	display: -webkit-flex
+	background: $accent_blue
+	color: $white
+	width: 824px
+	height: 364px
+	transform: translateY(50%)
+	-webkit-transform: translateY(50%)
+	flex-direction: row
+	-webkit-flex-direction: row
+	justify-content: space-between
+	-webkit-justify-content: space-between
+	text-align: center
+	align-items: center
+	-webkit-align-items: center
+	line-height: 40px
+	z-index: 1
+	div 
+		margin: 10px
+		img 
+			width: 180px
+
+.white_rectangle1
+	display: flex 
+	display: -webkit-flex
+	background: $white
+	width: 380px
+	height: 484px
+	transform: translateY(37%)
+	-webkit-transform: translateY(37%)
+	flex-direction: row
+	-webkit-flex-direction: row
+	justify-content: center
+	-webkit-justify-content: center
+	text-align: center
+	align-items: center
+	-webkit-align-items: center
+	line-height: 40px
+	z-index: 2
+	position: absolute
+	margin: 0 auto
+	left: 25%
+	flex-direction: column
+	form 
+		display: flex 
+		display: -webkit-flex
+		flex-direction: column
+		-webkit-flex-direction: column
 		justify-content: center
+		-webkit-justify-content: center
 		align-items: center
-		div
-			display: flex
-			justify-content: center
-			align-items: center
-			text-align: center
-			width: 50%
-			flex-direction: column
+		-webkit-align-items: center
+		input 
+			margin: 10px
+		input[type="text"],input[type="password"],input[type="email"],input[type="tel"]
+			padding: 10px
+			width: 100%
+		input[type="submit"]
+			padding: 10px
+			padding-bottom: 5px
+			padding-top: 5px
+			width: 80%
+			box-shadow: 4px 4px 4px rgba(0,0,0,0.6)
+			cursor: pointer
+			background: $gray
+			border: none
+			color: $white 
+			font-size: 1.8em
+			-webkit-transition: 400ms ease 
+			transition: 400ms ease 
+		input[type="submit"]:hover 
+			background: $accent_blue
+			box-shadow: 0px 0px 0px rgba(0,0,0,0.6)
+	div 
+		margin: 10px
+		img 
+			width: 180px
+
+.button
+	background: none
+	border: solid 1px $white
+	color: $white 
+	font-size: 1.8em
+	padding: 8px
+	padding-left: 14px
+	padding-right: 14px
+	cursor: pointer
+	transition: 400ms ease 
+	-webkit-transition: 400ms ease 
+
+.button:hover 
+	background: $white 
+	color: $accent_blue
